--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/express-validator": "^3.0.0",
     "@types/findup-sync": "^4.0.2",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.15.5",
     "nodemon": "^2.0.21",
     "ts-loader": "^9.4.2",
@@ -33,6 +34,7 @@
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "findup-sync": "^5.0.0",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.0.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
